--- a/wcsass/_menu.scss
+++ b/wcsass/_menu.scss
@@ -43,6 +43,7 @@
 }
 
 .navbar{
+	z-index: 500;
 
 	.search-form {
 		position: absolute;
